--- a/admin/index.html
+++ b/admin/index.html
@@ -2,34 +2,44 @@
 <html>
 <head>
   <title>Live Runner Map</title>
+
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-  <style>#map{height:100vh;}</style>
+
+  <style>
+    #map { height: 100vh; }
+  </style>
 </head>
+
 <body>
 <div id="map"></div>
 
 <script>
-var map = L.map('map').setView([20.5937,78.9629], 5);
-L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
-
-var firebaseConfig = {
+firebase.initializeApp({
   apiKey: "AIzaSyAfOUamkomr0AZORIDCVQVbNOAPLIySYwY",
   databaseURL: "https://run-tracker-c0934-default-rtdb.asia-southeast1.firebasedatabase.app/"
-};
-firebase.initializeApp(firebaseConfig);
+});
 
-var markers = {};
-firebase.database().ref("runners").on("value", snap => {
-  snap.forEach(child => {
-    let d = child.val();
-    if (!markers[child.key]) {
-      markers[child.key] = L.marker([d.lat, d.lng]).addTo(map)
-        .bindPopup("Runner " + child.key);
+const map = L.map('map').setView([20.5937, 78.9629], 5);
+L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png')
+  .addTo(map);
+
+const markers = {};
+
+firebase.database().ref("runners").on("value", snapshot => {
+  snapshot.forEach(child => {
+    const id = child.key;
+    const d = child.val();
+
+    if (!markers[id]) {
+      markers[id] = L.marker([d.lat, d.lng])
+        .addTo(map)
+        .bindPopup(`Runner ${id}`);
     } else {
-      markers[child.key].setLatLng([d.lat, d.lng]);
+      markers[id].setLatLng([d.lat, d.lng]);
     }
   });
 });
