--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Runner Live Tracking</title>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/nosleep.js@0.12.0/dist/NoSleep.min.js"></script>
 </head>
 <body>
 <h2>Live Run Tracking</h2>
