Remove Firebase API keys from index.html
Replaced sensitive Firebase API credentials with placeholders.

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 <script>
 var firebaseConfig = {
-  apiKey: "AIzaSyAfOUamkomr0AZORIDCVQVbNOAPLIySYwY",
-  databaseURL: "https://run-tracker-c0934-default-rtdb.asia-southeast1.firebasedatabase.app/"
+  apiKey: "#",
+  databaseURL: "#"
 };
 firebase.initializeApp(firebaseConfig);
 
