Obscure Firebase credentials in index.html
Replaced Firebase API key and database URL with placeholders.

--- a/captain/index.html
+++ b/captain/index.html
@@ -19,8 +19,8 @@
 
 <script>
 firebase.initializeApp({
-  apiKey: "AIzaSyAfOUamkomr0AZORIDCVQVbNOAPLIySYwY",
-  databaseURL: "https://run-tracker-c0934-default-rtdb.asia-southeast1.firebasedatabase.app/"
+  apiKey: "#",
+  databaseURL: "#"
 });
 
 const map = L.map('map').setView([20.5937, 78.9629], 5);
